--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 
 body {
   margin: 0;
+  padding: 20px;
+  background-color: rgb(245, 245, 245);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
