--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,16 @@
 
 body {
   margin: 0;
-  padding: 20px;
-  background-color: rgb(245, 245, 245);
+
+  /* background-color: rgb(245, 245, 245); */
+
+  background: linear-gradient(
+    0deg,
+    rgba(0, 121, 145, 1) 0%,
+    rgba(120, 255, 208, 1) 100%
+  );
+  background-attachment: fixed;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,4 +22,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
 }
