--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,4 +3,9 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  font-family: 'Brygada 1918', serif;
+}
+
+.loader {
+  margin: 40px 0;
 }
