--- a/src/Components/AppBar/AppBar.module.css
+++ b/src/Components/AppBar/AppBar.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
-
 .container {
   display: flex;
   align-items: center;
@@ -15,4 +13,14 @@
 
 .nav > a:not(:last-child) {
   margin-right: 15px;
+}
+
+.link {
+  font-size: 22px;
+  color: black;
+}
+
+.activeLink {
+  color: orange;
+  text-decoration: underline;
 }
