--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -1,4 +1,6 @@
 .btn {
+  width: 25px;
+  height: 25px;
   margin-left: auto;
   padding: 4px 4px;
   border-radius: 4px;
@@ -10,18 +12,20 @@
 }
 
 .btn:active {
-  transform: scale(0.8);
+  transform: scale(0.9);
   background-color: rgb(255, 102, 0);
 }
 
 .listItem {
   display: flex;
+  align-items: center;
   margin: 3px;
   padding: 5px 5px 5px 15px;
   font-weight: 500;
   background-color: #fff;
   border: 1px solid rgb(138, 138, 138);
   border-radius: 4px;
+  font-family: 'Pacifico', cursive;
   box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.54);
 }
 
@@ -29,4 +33,8 @@
   width: 15px;
   height: 15px;
   display: block;
+}
+
+.span {
+  min-width: 150px;
 }
