--- a/src/Components/Filter/Filter.module.css
+++ b/src/Components/Filter/Filter.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin: 20px 20px 20px 20px;
+  margin: 20px auto;
   width: 300px;
   font-weight: 600;
   border: 1px solid black;
