--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @import 'modern-normalize/modern-normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Suez+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Brygada+1918:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@600&family=Pacifico&display=swap');
 
 body {
   margin: 0;
-
-  /* background-color: rgb(245, 245, 245); */
 
   background: linear-gradient(
     0deg,
@@ -11,10 +12,6 @@ body {
     rgba(120, 255, 208, 1) 100%
   );
   background-attachment: fixed;
-
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
