--- a/src/Components/Notification/Notification.module.css
+++ b/src/Components/Notification/Notification.module.css
@@ -1,9 +1,10 @@
 .container {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 60px;
+  right: 40px;
   padding: 10px 20px;
   border-radius: 5px;
+  text-align: center;
   background-color: rgb(255, 134, 54);
 }
 
