Добавил нотификацию ошибки регистрации

--- a/src/Views/ContactsView/ContactsView.module.css
+++ b/src/Views/ContactsView/ContactsView.module.css
@@ -14,5 +14,13 @@
 }
 
 .container {
+  position: relative;
   width: 500px;
+}
+
+.loader {
+  position: absolute;
+  top: 15px;
+  left: 350px;
+  display: inline-block;
 }
